Add a quick app to test with
Add a download-putty Makefile rule so we can easily test the Gates
whitelist.

--- a/Makefile.am
+++ b/Makefile.am
@@ -48,3 +48,6 @@ EXTRA_DIST += \
 	src/config.js.in \
 	eos-gates.in \
 	$(NULL)
+
+download-putty:
+	curl http://the.earth.li/~sgtatham/putty/latest/x86/putty.exe -o com.endlessm.test-whitelist.exe
