--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Build-Depends: debhelper (>= 9),
                gir1.2-glib-2.0,
                gir1.2-gtk-3.0,
                gjs,
+               gnome-common,
                libglib2.0-bin,
                libglib2.0-dev,
                pkg-config
