--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,7 @@ Build-Depends: debhelper (>= 9),
                gir1.2-gtk-3.0,
                gjs,
                gnome-common,
+               libgjs-dev,
                libglib2.0-bin,
                libglib2.0-dev,
                pkg-config
