Split the windows-specific stuff out to a separate binary / desktop file
EosGates will soon gain a new binary for .rpm / .deb support soon.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 com.endlessm.test-whitelist.exe
-com.endlessm.Gates.desktop
-eos-gates
+com.endlessm.Gates.Windows.desktop
+eos-gates-windows
 src/config.js
 
 *.gresource
