--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,3 +1,4 @@
 # List of source files which contain translatable strings.
 src/eos_gates.js
-data/com.endlessm.Gates.desktop.in.in
+src/eos_gates_windows.js
+data/com.endlessm.Gates.Windows.desktop.in.in
