--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -2,3 +2,5 @@
 src/eos_gates.js
 src/eos_gates_windows.js
 data/com.endlessm.Gates.Windows.desktop.in.in
+src/eos_gates_linux_package.js
+data/com.endlessm.Gates.LinuxPackage.desktop.in.in
