Use application/x-deb for debian packages mimetypes

--- a/data/com.endlessm.Gates.LinuxPackage.desktop.in.in
+++ b/data/com.endlessm.Gates.LinuxPackage.desktop.in.in
@@ -4,4 +4,4 @@ _Name=Install Linux Applications
 _Comment=Install Linux Applications
 Exec=@bindir@/eos-gates-linux-package %F
 NoDisplay=true
-MimeType=application/x-rpm;application/x-source-rpm;application/x-debian-package
+MimeType=application/x-rpm;application/x-source-rpm;application/x-deb
