po: add replacements.js to POTFILES.in

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -4,3 +4,4 @@ src/eos_gates_windows.js
 data/com.endlessm.Gates.Windows.desktop.in.in
 src/eos_gates_linux_package.js
 data/com.endlessm.Gates.LinuxPackage.desktop.in.in
+src/replacements.js
