Export properties with 'var', not 'const'
A recent version of GJS has started emitting warnings like the following
when module A defines a variable with 'const', and module B tries to
access it:

    (gjs-console:23461): Gjs-WARNING **: 12:34:46.974: Some code accessed the property 'Application' on the module 'eos_gates'. That property was defined with 'let' or 'const' inside the module. This was previously supported, but is not correct according to the ES6 standard. Any symbols to be exported from a module must be defined with 'var'. The property access will work as previously for the time being, but please fix your code anyway.
    (gjs-console:23461): Gjs-WARNING **: 12:34:46.975: Some code accessed the property 'GETTEXT_PACKAGE' on the module 'config'. That property was defined with 'let' or 'const' inside the module. This was previously supported, but is not correct according to the ES6 standard. Any symbols to be exported from a module must be defined with 'var'. The property access will work as previously for the time being, but please fix your code anyway.

https://phabricator.endlessm.com/T24959

--- a/src/config.js.in
+++ b/src/config.js.in
@@ -1,5 +1,5 @@
-const PACKAGE_NAME = '@PACKAGE_NAME@';
-const PACKAGE_VERSION = '@PACKAGE_VERSION@';
-const GETTEXT_PACKAGE = '@GETTEXT_PACKAGE@';
-const RESOURCE_DIR = '@pkgdatadir@';
-const LOCALE_DIR = '@localedir@';
+var PACKAGE_NAME = '@PACKAGE_NAME@';
+var PACKAGE_VERSION = '@PACKAGE_VERSION@';
+var GETTEXT_PACKAGE = '@GETTEXT_PACKAGE@';
+var RESOURCE_DIR = '@pkgdatadir@';
+var LOCALE_DIR = '@localedir@';
