Migrate transifex configuration for use with new tx client
This is the result of `tx migrate` with the noise removed.

https://phabricator.endlessm.com/T33894

--- a/.tx/config
+++ b/.tx/config
@@ -1,8 +1,9 @@
 [main]
 host = https://www.transifex.com
 
-[eos-gates.app]
+[o:endless-os:p:eos-gates:r:app]
+file_filter = po/<lang>.po
 source_file = po/eos-gates.pot
 source_lang = en
-file_filter = po/<lang>.po
-type = PO
+type        = PO
+
