Rewrite build system to use Meson

--- a/data/com.endlessm.Gates.Windows.desktop.in.in
+++ b/data/com.endlessm.Gates.Windows.desktop.in.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Type=Application
-_Name=Launch Windows Application
-_Comment=Launch Windows Applications
+Name=Launch Windows Application
+Comment=Launch Windows Applications
 Exec=@bindir@/eos-gates-windows %F
 NoDisplay=true
 MimeType=application/x-ms-dos-executable;application/x-msi
