--- a/data/com.endlessm.Gates.LinuxPackage.desktop.in.in
+++ b/data/com.endlessm.Gates.LinuxPackage.desktop.in.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Type=Application
-_Name=Install Linux Applications
-_Comment=Install Linux Applications
+Name=Install Linux Applications
+Comment=Install Linux Applications
 Exec=@bindir@/eos-gates-linux-package %F
 NoDisplay=true
 MimeType=application/x-rpm;application/x-source-rpm;application/x-deb
