--- a/debian/control
+++ b/debian/control
@@ -2,14 +2,14 @@ Source: eos-gates
 Section: non-free/utils
 Priority: extra
 Maintainer: Cosimo Cecchi <cosimo@endlessm.com>
-Build-Depends: debhelper (>= 9),
+Build-Depends: debhelper-compat (= 13),
                gettext,
                gir1.2-glib-2.0,
                gir1.2-gtk-3.0,
-               gnome-common,
                libgjs-dev,
                libglib2.0-bin,
                libglib2.0-dev,
+               meson (>= 1),
                pkg-config
 Standards-Version: 3.9.2
 
