--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,9 @@
-com.endlessm.test-whitelist.exe
-com.endlessm.Gates.Windows.desktop
-eos-gates-windows
-com.endlessm.Gates.LinuxPackage.desktop
-eos-gates-linux-package
-src/config.js
-
-*.gresource
-Makefile
-Makefile.in
-ABOUT-NLS
-aclocal.m4
-autom4te.cache
-compile
-configure
-eos-gates
-install-sh
-missing
-py-compile
-stamp-h1
-*.gir
-*.la
-*.lo
-*.o
-*.pyo
-*.pyc
 *.swp
-*.typelib
 *~
 \#*\#
-/depcomp
-/libtool
-/ltmain.sh
-/po/.intltool-merge-cache
-/po/Makevars.template
-/po/Makefile.in.in
-/po/POTFILES
-/po/stamp-it
-/po/Rules-quot
-/po/boldquot.sed
-/po/en@boldquot.header
-/po/en@quot.header
-/po/insert-header.sin
-/po/quot.sed
-/po/remove-potcdate.sin
-/po/*.gmo
-/config.guess
-/config.log
-/config.rpath
-/config.status
-/config.sub
-/m4/
+
+/debian/.debhelper/
+/debian/debhelper-build-stamp
+/debian/eos-gates.substvars
+/debian/eos-gates/
+/debian/files
