--- a/meson.build
+++ b/meson.build
@@ -2,6 +2,7 @@ project(
     'eos-gates',
     version: '1.0.0',
     meson_version: '>= 1',
+    license: 'GPL-3.0-or-later',
 )
 
 gnome = import('gnome')
