--- a/debian/control
+++ b/debian/control
@@ -4,8 +4,9 @@ Priority: extra
 Maintainer: Endless OS Maintainers <maintainers@endlessos.org>
 Build-Depends: debhelper-compat (= 13),
                gettext,
+               gir1.2-adw-1 (>= 1.2),
+               gir1.2-gtk-4.0 (>= 4.8),
                gir1.2-glib-2.0,
-               gir1.2-gtk-3.0,
                libgjs-dev,
                libglib2.0-bin,
                libglib2.0-dev,
@@ -17,8 +18,9 @@ Package: eos-gates
 Architecture: all
 Section: utils
 Priority: extra
-Depends: gir1.2-glib-2.0,
-         gir1.2-gtk-3.0,
+Depends: gir1.2-adw-1 (>= 1.2),
+         gir1.2-glib-2.0,
+         gir1.2-gtk-4.0 (>= 4.8),
          gjs,
          ${misc:Depends}
 Description: eos-gates
